Changelog
=========

1.7-dev0 - (unreleased)
---------------------------

1.6 - (2022-02-15)
---------------------------
* Change: Add eea.banner dependency
  [avoinea]

1.5 - (2021-12-16)
---------------------------
* Change: Add eea.cache
  [avoinea refs #139888]

1.4 - (2021-11-23)
---------------------------
* Change: Removed eea.restapi from kitkat
  [iulianpetchesi refs #139888]

1.3 - (2021-11-22)
---------------------------
* Change: Added missing dependencies
  [iulianpetchesi refs #139888]

1.2 - (2021-11-11)
---------------------------
* Change: Fix python version requirement
  [avoinea]

1.1 - (2021-11-11)
---------------------------
* Change: Added plonesaas jenkins test
  [iulianpetchesi refs #139888]

1.0 - (2021-11-09)
-----------------------

* Initial release.
  [eea]