@@ -1,0 +1,7 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<metadata>
+  <version>1.6</version>
+  <dependencies>
+    <dependency>profile-eea.kitkat:default</dependency>
+  </dependencies>
+</metadata>
