@@ -3,6 +3,8 @@ Changelog
 
 1.7-dev0 - (unreleased)
 ---------------------------
+* Change: Add testing profile for cypress testing
+  [avoinea refs #146058]
 
 1.6 - (2022-02-15)
 ---------------------------
